--- a/cards.html
+++ b/cards.html
@@ -89,45 +89,45 @@
 
 const DATA = {
   R: [
-    { key:"rabbit_hero", name:"うさぎ勇者",  role:"勇者",
+    { key:"rabbit_hero", name:"いぬ勇者",  role:"勇者",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:3 },  // 装備なし（弱い）
       GEAR:{ HP:6, ATK:3, DEF:3, MOV:3 }   // 装備あり（今の強い数値）
     },
-    { key:"pig_tank", name:"ぶた盾兵", role:"盾兵",
+    { key:"pig_tank", name:"きりん盾兵", role:"盾兵",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:2 },
       GEAR:{ HP:5, ATK:2, DEF:4, MOV:2 }
     },
-    { key:"snake_arch", name:"へび弓兵", role:"弓兵",
+    { key:"snake_arch", name:"りゅう弓兵", role:"弓兵",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:2 },
       GEAR:{ HP:5, ATK:2, DEF:2, MOV:4 }
     },
-    { key:"ele_mage", name:"ぞう魔法使い", role:"魔法",
+    { key:"ele_mage", name:"うし魔法使い", role:"魔法",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:2 },
       GEAR:{ HP:5, ATK:3, DEF:2, MOV:3 }
     },
-    { key:"lion_axe", name:"らいおん斧兵", role:"斧兵",
+    { key:"lion_axe", name:"うま斧兵", role:"斧兵",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:3 },
       GEAR:{ HP:5, ATK:4, DEF:1, MOV:2 }
     },
   ],
   B: [
-    { key:"dog_hero", name:"犬勇者", role:"勇者",
+    { key:"dog_hero", name:"うさぎ勇者", role:"勇者",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:2 },
       GEAR:{ HP:6, ATK:3, DEF:3, MOV:3 }
     },
-    { key:"gira_tank", name:"きりん盾兵", role:"盾兵",
+    { key:"gira_tank", name:"ぶた盾兵", role:"盾兵",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:2 },
       GEAR:{ HP:5, ATK:2, DEF:4, MOV:2 }
     },
-    { key:"dragon_arch", name:"龍弓兵", role:"弓兵",
+    { key:"dragon_arch", name:"へび弓兵", role:"弓兵",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:3 },
       GEAR:{ HP:5, ATK:2, DEF:2, MOV:4 }
     },
-    { key:"cow_mage", name:"牛魔法使い", role:"魔法",
+    { key:"cow_mage", name:"ぞう魔法使い", role:"魔法",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:2 },
       GEAR:{ HP:5, ATK:3, DEF:2, MOV:3 }
     },
-    { key:"horse_axe", name:"うま斧兵", role:"斧兵",
+    { key:"horse_axe", name:"らいおん斧兵", role:"斧兵",
       BASE:{ HP:2, ATK:1, DEF:1, MOV:3 },
       GEAR:{ HP:5, ATK:4, DEF:1, MOV:2 }
     },
